12th Commit GabrielRamos

--- a/src/intranetBundle/Resources/translations/messages.es.yml
+++ b/src/intranetBundle/Resources/translations/messages.es.yml
@@ -29,5 +29,15 @@ Notifications: Activar Notificaciones
 Photo: Foto de Perfil
 Modify: Modificar
 
+#CHANNEL
+new_channel: "Crear un nuevo Canal"
+message_1: "Debido al gran número de elementos en las Noticias, se decide no relacionarlas con los canales a la hora de crearlos.<br>Sin embargo, es posible hacerlo editando las noticias.<br><br><u>Pero SÍ ES POSIBLE relacionar los usuarios con los canales.</u>"
+create_channel: "Crear el Canal"
+
+#NEWS
+message_2: "No estaría mal poder hacer un filtro por canal <br> o mostrar también los canales en los que se haya y hacer click en el nombre de la columna"
+
+
+
 
 This is Landing Page: Esta es la pagina de aterrizaje
