--- a/src/intranetBundle/Resources/translations/messages.en.yml
+++ b/src/intranetBundle/Resources/translations/messages.en.yml
@@ -4,6 +4,8 @@ New User: "New User"
 Welcome: "Welcome to the intranet"
 lang: "ENGLISH"
 Hello: "Hi!"
+you dont exist: "If you are here it's because you dont exist yet on the databse"
+creating on database: "We are going to create you on the database"
 
 #MENU
 Settings: "Settings"
@@ -28,3 +30,11 @@ Telephone: Telephone
 Notifications: Activate Notifications
 Photo: Profile Picture
 Modify: Update
+
+#CHANNEL
+new_channel: "Create a New Channel"
+message_1: "Due to the big number of elements in the News Feed, it is decided not to link them at the hour of create a channel.<br>Otherwise, it is possible to do it editing the news. <br><br><u>But IT IS POSSIBLE to link the channels to the users.</u>"
+create_channel: "Create the Channel"
+
+#NEWS
+message_2: "Not a bad idea to build a filter by channel<br> or showing also the channels which it belongs and clicking in the name of the td"
