14th Commit GabrielRamos

--- a/src/intranetBundle/Resources/translations/messages.en.yml
+++ b/src/intranetBundle/Resources/translations/messages.en.yml
@@ -21,6 +21,7 @@ News Feed: News Feed
 Form Management: Form Management
 Incoming Forms: Incoming Forms
 Old Forms: Old Forms
+Work at Home: Work at Home
 
 #SETTINGS
 Name: Name
