--- a/src/intranetBundle/Resources/translations/messages.es.yml
+++ b/src/intranetBundle/Resources/translations/messages.es.yml
@@ -19,6 +19,7 @@ News Feed: Noticias
 Form Management: Gestión de Formularios
 Incoming Forms: Formularios Entrantes
 Old Forms: Formularios Antiguos
+Work at Home: Trabajar en Casa
 
 #SETTINGS
 Name: Nombre
