--- a/src/intranetBundle/Resources/translations/messages.fr.yml
+++ b/src/intranetBundle/Resources/translations/messages.fr.yml
@@ -19,6 +19,7 @@ News Feed: Nouvelles
 Form Management: Gestion des utilisateurs
 Incoming Forms: Formes entrantes
 Old Forms: Formes anciennes
+Work at Home: Travailler chez moi
 
 #SETTINGS
 Name: Nom
